--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "module-alias": "^2.2.2",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -19,6 +20,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0"
+  },
+  "_moduleAliases": {
+    "@"      : "."
+   
   },
   "eslintConfig": {
     "root": true,
