--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "module-alias": "^2.2.2",
+    "moment": "^2.29.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -22,8 +23,7 @@
     "eslint-plugin-vue": "^7.0.0"
   },
   "_moduleAliases": {
-    "@"      : "."
-   
+    "@": "."
   },
   "eslintConfig": {
     "root": true,
